@@ -14,14 +14,14 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 6587167a296c9b15a3cb25a0856c2b8ebf882239 ChangeLog
+SHA1 6724908059f036b17f79dee5b48208ff4b822785 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 1d292a0e6dba2ce264985cc3004ff0dc9b298bfc MANIFEST
-SHA1 2fcc51e1cd7a1c04536a60287651e5df72e8b4a8 META.yml
-SHA1 9b4e6b88169cff029018f4681077a62482a2fb8b Makefile.PL
+SHA1 effd142621c90f36dd86b06c5e6989576254b452 META.yml
+SHA1 c8a63edc2b6e94c5f96d809baf5565442e992ea8 Makefile.PL
 SHA1 3963e2adaaaf4dabdd2d22748334db30cefedb97 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
-SHA1 c5096f77f7afdbddd504bb1f7b70e192a0700c4f bin/fullauto.pl
+SHA1 757f8405065fb6398dd1a6c20f29ba971375537f bin/fullauto.pl
 SHA1 e7597f2c7bab49174bbe597b575bc29f987af7f1 bin/install_mozrepl_plugin.exe
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
 SHA1 7305dbe2904416e28decb05396988a5d51d578be inc/Module/Install.pm
@@ -37,7 +37,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 225dc1fa8a31e86954f43fb8e6a2060c9c54e6f8 install_mozrepl_plugin.ahk
-SHA1 591b88eceb794ae9b2218e50b7db652cac245b4b lib/Net/FullAuto.pm
+SHA1 b3e44591718086a4deb99eb73bc7df2d3a4f50ba lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -48,17 +48,17 @@ SHA1 652187d2e9b92347b5ce4622086b2314ad9962ee lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 35b0f57527b9813d39d63df1e3db84fdc13e9514 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 e0f261e25b722eb59848bcd0a9ee2936a6cc5d87 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 c738edc8106956439460ade9227ca7d2f26e8535 lib/Net/FullAuto/FA_Core.pm
+SHA1 7be5bbb1e7e898e129d45070ef95b056a36dd28f lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.13 (Cygwin)
 
-iQEcBAEBAgAGBQJSm9xLAAoJEBa/9Pad787EEBIIAJWvuC6f3f4/IWtcaCfLL/HA
-GuXh6Y/QG0M6FXNRkKcnfrBmV9JToFeEYkBIKuqeaiAjMzyPkCxIN3aFWY2yoQno
-p3/NIyyq4VJAsFXxrFC+8R0+fpt7DeToUZCHZWw8y0WE047teTwFP0anWRIV0Q1L
-72rITLVTMRaTzVd3Z8IT77poiX8iEpr8iy/3U/GOAglZQVs830NNR1Kaoc+XjPwK
-WYmIbE3+YGgaKAuM7fw6qQ2pK6WHYez/T/IAaMZ2mPFoy9XzauoJzyaT/X3dvv9y
-UTPJj/32m3UJAKfSRlvuiqrnrVxVpCUtD+JcBZnaW/g9yNDLxzAkCpVdg1LEeew=
-=oheV
+iQEcBAEBAgAGBQJSnz6QAAoJEBa/9Pad787EoPAH+wW0KhD8YNqsMDU9dRjAWxvP
+Ci3oA9D0ptrPXGb/63EPT0hZgKmOuc+3VP2zt+CFi04wZo5aLjpPIJ+vrmNs7x+v
+2Mf/P3WwaDs6XeDi4v84gCfoc7tBFPpBhfm158eGLDyFwdmihcbunP9QMq5MdS+t
+dALokgJy4ptW63axzHRVeXI4KPhIJUgEYXjn37fa97jdkqb+e6afT9/1C9eegQhO
+QERgfx4Va8EmdnPq3JJSgbjeEpgqSdQKJqXSTa+xAOkn4ah3sILnAm9G0DZdsY+d
+lAWU7JgZKlMXX1+fVf9BxDHrxGl7OSj3DV5rz9mi5Jiyp6or9Gz+4GGgAb6VS+4=
+=1TVM
 -----END PGP SIGNATURE-----
