@@ -19,6 +19,18 @@
 ################################################################
 
 
+2013-12-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.99999965 released.
+
+        * Added --cat to display FullAuto user files from
+          command line.
+
+        * More Development on Import/Export Menu Item.
+
+        * New version of Term::Menus paired with this release.
+
+
 2013-12-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.99999964 released.
